Added the npm run electron command

--- a/Quick-Start-Electron/package.json
+++ b/Quick-Start-Electron/package.json
@@ -4,5 +4,8 @@
     "main": "main.js",
     "dependencies": {
         "electron": "^1.6.11"
+    },
+    "scripts": {
+        "electron": "electron ."
     }
 }
