--- a/AngularProfile-Page/package.json
+++ b/AngularProfile-Page/package.json
@@ -8,7 +8,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "details-copy": "copy .\\src\\main.js .\\dist\\main.js && copy .\\src\\package.json .\\dist\\package.json",
+    "electron-dev": "ng build && copy .\\dist\\* .\\electron\\dev\\* && electron .\\electron\\dev\\",
+    "electron-prod": "ng build && copy .\\dist\\* .\\electron\\prod\\* && electron .\\electron\\prod\\"
   },
   "private": true,
   "dependencies": {
