--- a/AngularProfile-Page/src/package.json
+++ b/AngularProfile-Page/src/package.json
@@ -1,5 +1,7 @@
 {
     "name": "AngularProfilePicture",
     "version": "0.0.1",
-    "main": "main.js"
+    "main": "main.js",
+    "productName": "Login Screen Demo",
+    "description": "Login Screen App"
 }
