--- a/AngularProfile-Page/package.json
+++ b/AngularProfile-Page/package.json
@@ -9,12 +9,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "details-copy": "copy .\\src\\main.js .\\dist\\main.js && copy .\\src\\package.json .\\dist\\package.json",
+    "details-copy": "copy .\\src\\main.js .\\dist\\main.js && copy .\\src\\package.json .\\dist\\package.json && xcopy .\\src\\Installers\\* .\\dist\\Installers\\* /s /e /y",
     "electron-dev": "npm run build && xcopy .\\dist .\\electron\\dev /s /e /y && electron .\\electron\\dev\\",
     "electron-prod": "npm run build && xcopy .\\dist .\\electron\\prod /s /e  && electron .\\electron\\prod\\",
-    "electron-prod-build": "npm run build && xcopy .\\dist .\\electron\\dev /s /e /y",
+    "electron-prod-build": "npm run build && xcopy .\\dist .\\electron\\prod /s /e /y",
     "build-windows": "npm run electron-prod-build && electron-packager D:\\Source\\Electron-Hello-World\\AngularProfile-Page\\electron\\prod\\ --out D:\\Source\\Electron-Hello-World\\AngularProfile-Page\\Builds\\Windows --platform=win32 --arch=ia32 --overwrite",
-    "windows-installer": "npm run build-windows && node createInstaller.js"
+    "windows-installer": "npm run build-windows && node .\\src\\Installers\\createInstaller.js"
   },
   "private": true,
   "dependencies": {
